# Font-Downloader

./: .gitignore  Cargo.toml  Font-Downloader.doap  README.md  flake.nix  meson.build  org.gustavoperedo.FontDownloader.Master.json  org.gustavoperedo.FontDownloader.json  org.gustavoperedo.FontDownloader.json~  shell.nix  shell.nix.bak
.github/workflows/: build.yml
.vim/: coc-settings.json
build-aux/: cargo.sh
cambalache/: Font Downloader.cmb
data/: meson.build  org.gustavoperedo.FontDownloader.appdata.xml.in  org.gustavoperedo.FontDownloader.desktop.in  org.gustavoperedo.FontDownloader.gschema.xml
data/icons/: meson.build
debian/: changelog  control  rules
po/: LINGUAS  POTFILES  POTFILES.in  base.po  base.pot  bn.po  ca.po  cs.po  de.po  de_AT.po  de_BE.po  de_CH.po  de_DE.po  de_IT.po  de_LI.po  de_LU.po  en_GB.po  es.po  es_AR.po  es_BO.po  es_CL.po  es_CO.po  es_CR.po  es_CU.po  es_DO.po  es_EC.po  es_ES.po  es_GT.po  es_HN.po  es_MX.po  es_NI.po  es_PA.po  es_PE.po  es_PR.po  es_PY.po  es_SV.po  es_US.po  es_UY.po  es_VE.po  fa.po  (+30 more)
src/: application.rs  config.rs  custom_expander_row.rs  font-box.ui  font-box.ui~  font-list-pane.ui  font-list-pane.ui~  font-widget.ui  font_downloader.gresource.xml  fontdownloader.gresource.xml  fontdownloader.in  fontpreview.ui  fontpreview.ui~  fsync.py  green.css  main.py  main.rs  meson.build  settings-window.glade~  settings-window.ui~  style.css  webfonts.json  window.py  window.rs  window.ui  window.ui~  windowX11.py
src/ui/: expander_row.ui  preview_row.ui  window.ui
